another minor style correction (keeping everything aligned)

--- a/vzm-style.css
+++ b/vzm-style.css
@@ -65,7 +65,7 @@ div.sectiontext {
 /*	width: 31.4em; */
 /*	width: 30.4em; */
 /*	width: 35.2em; */
-	padding-top: 16.0em;
+	padding-top: 14.0em;
 	padding-bottom: 4.8em; }
 
 div.foottext {
